<resources>
    <string name="app_name">HandiTard</string>
    <string name="mon_essentiel">Mon essentiel</string>
    <string name="mon_entourage">Mon entourage</string>
    <string name="mes_loisirs">Mes loisirs</string>
    <string name="ma_sante">Ma santé</string>
    <string name="appel_infirmiere">Appel Infirmière</string>
    <string name="eclairage">Eclairage</string>
    <string name="ouvertures">Ouvertures</string>
    <string name="temperature">Température</string>
    <string name="text_eclairage"><![CDATA[Vous êtes dans la pièce <<X>>. Nous modifions le status de l\'éclairage.]]></string>
    <string name="etat_actuel">Etat actuel</string>
    <string name="voulez_vous">Voulez Vous....</string>
</resources>
